--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,12 @@
   font-weight: normal;
   font-style: normal;
 }
+.plasma-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 
 /* Define other weights/styles if available (e.g., bold, italic) */
 @font-face {
